# xbrain

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.toml.example  pyproject.toml
.claude/skills/enriching-x-knowledge/: SKILL.md
.claude/workflows/: resynth-topic-overviews.js
docs/: digest-video.md  troubleshooting.md  tutorial.md
scripts/: xbrain-vision
src/xbrain/: chat.py  cli.py  config.py  content_policy.py  dashboard.py  describe.py  diff.py  digest.py  enrich.py  fetch.py  fetch_x.py  generate.py  llm_client.py  llm_json.py  models.py  rubrics.py  topic_synth.py  topics.py  validate.py  video_content.py  video_digest.py  video_media.py  video_select.py  video_transcript.py  vision.py  vocab.py  worksheet.py
src/xbrain/executors/: __init__.py  api.py  base.py
src/xkb/: archive.py  fetch.py
tests/: conftest.py  test_archive.py  test_article.py  test_chat.py  test_cli.py  test_config.py  test_content_policy.py  test_dashboard.py  test_describe.py  test_describe_worksheet.py  test_diff.py  test_digest.py  test_enrich.py  test_executors_api.py  test_executors_base.py  test_fetch.py  test_fetch_x.py  test_generate.py  test_graphql.py  test_llm_client.py  test_llm_json.py  test_models.py  test_rubrics.py  test_snapshot_auto.py  test_taxonomy_health.py  test_topic_synth.py  test_topics.py  test_validate.py  test_video_content.py  test_video_media.py  test_video_select.py  test_video_transcript.py  test_vision.py  test_vocab.py  test_worksheet.py  test_worksheet_consumer_wiring.py  test_xbrain_vision.py
(+9 files in other folders)
